<resources>
    <string name="app_name">DigiPub</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="start_tracking">Start tracking</string>
    <string name="stop_tracking">Stop tracking</string>
    <string name="notification_channel_description">Displays temperature data</string>
    <string name="warning_notification_channel_description">Shows warnings about your battery temperature</string>
    <string name="battery_too_hot_title">Battery too HOT !</string>
    <string name="battery_too_hot_message">This may reduce the lifetime of your battery</string>
    <string name="title_activity_settings">Settings</string>
    <string name="stop">STOP</string>

    <!-- Strings related to Settings -->
    <string name="settings">Settings</string>

    <string name="general">General</string>
    <string name="measuring_unit">Measuring unit</string>
    <string name="measuring_unit_summary">Change the default measuring unit</string>
    <string name="launch_at_startup">Launch at startup</string>
    <string name="startup_launch_summary">Automatically start displaying the temperature at startup</string>

    <string name="notifications">Notifications</string>
    <string name="allow_notifications">Allow notifications</string>
    <string name="allow_warning_notification_summary">Warn me when my battery is too hot</string>
    <string name="warning_temperature">Warning temperature</string>
    <string name="warning_temperature_summary">Send a notification when the battery temperature is strictly greater than the specified value</string>

    <!-- Keys for preferences -->
    <string name="key_measuring_unit" translatable="false">key_measuring_unit</string>
    <string name="key_startup_launch" translatable="false">key_startup_launch</string>
    <string name="key_warning_temperature" translatable="false">key_warning_temperature</string>
    <string name="key_on_off_notification" translatable="false">key_on_off_notification</string>

    <!-- Add IDs -->
    <string name="banner_add_id" translatable="false">banner-id</string>
    <string name="admob_app_id" translatable="false">app-id</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="float_value">%.4f</string>

    <!--    About page-->
    <string name="copyright">&#169;</string>
    <string name="polover">Polover</string>
    <string name="contact">Contact Us</string>
    <string name="rate_app">Rate App</string>
    <string name="credits">Credits</string>

    <!--    constants-->
    <string name="start_foreground_action">com.polover.digipub.action.startforeground</string>
    <string name="stop_foreground_action">com.polover.digipub.action.stopforeground</string>
    <string name="main_channel">com.polover.digipub.mainChannel</string>
    <string name="warning_channel">com.polover.digipub.warningChannel</string>

    <string name="rotation_alert_title">Unhealthy phone orientation detected!</string>
    <string name="rotation_alert_message">Using phone while in laying position is not recommended.</string>

    <string name="camera_alert_title">Phone too close to face!</string>
    <string name="camera_alert_message">Staring at your screen in such a short distance is harmful for eyes.</string>

    <string name="default_battery">0</string>
    <string name="default_camera">0</string>
    <string name="default_rotation">0</string>

    <string name="credits_title">Credits</string>
    <string name="credits_content">Thanks to...</string>
    <string name="ok_credits">OK</string>

    <string name="menu_battery">Battery Temperature</string>
    <string name="menu_camera">Screen-to-face Distance</string>
    <string name="menu_rotation">Phone Rotation</string>

    <string name="no_account">You are a guest user. To save and view genererated results from this application, you need to sign up an account.</string>
</resources>
