<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/startTrackingBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="50dp"
                    android:elevation="20dp"
                    android:onClick="onStartStopTracking"
                    android:padding="20dp"
                    android:text="@string/start_tracking"
                    android:textSize="20sp"
                    app:cornerRadius="30dp"
                    app:icon="@drawable/ic_play_full"
                    app:iconSize="40dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/batteryCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="20dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/ic_battery_orange" />

                                <ImageView
                                    android:id="@+id/batteryTip"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:onClick="showTooltipText"
                                    android:src="@drawable/ic_help_orange"
                                    android:tooltipText="@string/menu_battery" />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/batTempTv"
                                style="@style/TextAppearance.MaterialComponents.Headline4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="0" />

                        </LinearLayout>


                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cameraDisCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="20dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/ic_eye_orange" />

                                <ImageView
                                    android:id="@+id/cameraTip"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:onClick="showTooltipText"
                                    android:src="@drawable/ic_help_orange"
                                    android:tooltipText="@string/menu_camera" />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/camDisTv"
                                style="@style/TextAppearance.MaterialComponents.Headline4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="0" />

                        </LinearLayout>


                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/rotationCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="20dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/ic_orientation_orange" />

                                <ImageView
                                    android:id="@+id/orientationTip"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:onClick="showTooltipText"
                                    android:src="@drawable/ic_help_orange"
                                    android:tooltipText="@string/menu_rotation" />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/rotationTv"
                                style="@style/TextAppearance.MaterialComponents.Headline4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="0" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>